2022-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/doc.tmac (Nm): Fix `if` -> `ie` typo/thinko.

	Fixes <https://savannah.gnu.org/bugs/?63527>.  Thanks to John
	Gardner for the report.

2022-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/tests/doc_Nm-works.sh: Add more checks.

2022-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/smoke-test_html_device.sh: Add checks for
	inlining of images when tbl(1) or eqn(1) used.

2022-12-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/andoc.tmac (reload-man): Unplant `doc-break-body-text`
	trap, added in commit 892703b17e, 6 September.  Its survival
	into man(7) pages didn't seem to cause any problems but I have
	no confidence that will remain true forever.

2022-12-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac (initialization): Fix problem with `FT` register
	validation.  Small but valid values were being rejected due to
	inappropriate use of scaling operator.  Also throw user a bone
	by expressing what size '1v' is for the output device, in basic
	units.

2022-12-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man, mdoc]: Fix Savannah #63500.  Support use of `P` (initial
	page number) register when batch rendering, regardless of
	switching macro packages between man(7) and mdoc(7) or setting
	of `C` (continuous numbering) register.  (`P` without `C` means
	"start numbering each rendered document at \n[P]".)

	* tmac/an.tmac (an-end): Call `an*break-page-with-new-number`
	instead of invoking `bp`.
	(an*break-page-with-new-number): If `P` is set and `C` is not,
	use value of `P` as the next page number.
	(TH): If `C` register is set, remove `P` register after ending a
	previous document.
	(initialization): If `P` is set, assign the page number using
	the `pn` request if the transition to the first formatted page
	has not yet occurred; otherwise update page number register `%`